scm/src/main/resources/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8084 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/grpc" }
                          route: { cluster: grpc_service }
                http_filters:
                    - name: envoy.filters.http.grpc_json_transcoder
                      config:
                        services: ["InventoryService"]
                        print_options:
                          add_whitespace: true
                          always_print_primitive_fields: true
                          always_print_enums_as_ints: false
                          preserve_proto_field_names: false
                    - name: envoy.filters.http.router

  clusters:
    - name: grpc_service
      connect_timeout: 0.5s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: grpc_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 9090 }
      http2_protocol_options: {}
